--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                     <p><i class="fa-solid fa-paper-plane"></i>Ut.curse18.com</p>
                     <p><i class="fa-solid fa-phone"></i>9517233493</p>
                     <div class="social-icons">
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/utkarsh-verma1806/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://utkarsh1806.github.io/Portfolio/"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/utkarshh.verma/"><i class="fa-brands fa-instagram"></i></a>
                     </div>
-                    <a href="" class="btn btn2">Download Resume</a>
+                    <a href="images/Utkarsh_Verma _Resume.pdf" download class="btn btn2">Download Resume</a>
                 </div>
                 
                 <div class="contact-right">
